Clean Up Code. - Update TSConfig - Using TS best practice (No any, No Null Assertion...) - Added biome for formating and rules Linting - Aded TSC to check TS linting - Setup PNPM - And somes others fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,19 @@
 {
-  "compilerOptions": {
-    "baseUrl": "src",
-    "moduleResolution": "node",
-    "module": "ES2015",
-    "target": "ES2020",
-    "strictFunctionTypes": true,
-    "noImplicitReturns": true,
-    "lib": ["WebWorker"],
-    "paths": {
-      "*.ts": ["*"]
-    }
-  },
-  "include": ["src/*.ts"],
+    "compilerOptions": {
+        "baseUrl": "src",
+        "moduleResolution": "node",
+        "module": "ES2020",
+        "target": "ES2020",
+        "strictFunctionTypes": true,
+        "noImplicitReturns": true,
+        "lib": ["WebWorker", "ES2023", "DOM"],
+        "paths": {
+            "*.ts": ["*"]
+        },
+        "allowImportingTsExtensions": true,
+        "downlevelIteration": true,
+        "skipLibCheck": true
+    },
+    "include": ["src/*.ts"],
 }
+ 
