--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "@voxelio/zip",
-    "version": "3.0.2",
+    "version": "3.0.3",
     "description": "A tiny and fast client-side streaming ZIP generator",
     "browser": "index.js",
     "module": "index.js",
     "types": "index.d.ts",
     "type": "module",
+    "files": ["index.js", "index.d.ts"],
     "exports": {
         ".": "./index.js"
     },
